# szalinski_2d

./: Cargo.toml  README.md
rewrite/: Cargo.toml  LICENSE.md  README.md  default_params  main.sh
rewrite/src/: cad.rs  cad_struct.rs  cost.rs  eval.rs  hyperparameters.rs  lib.rs  num.rs  prune.rs  rules.rs  solve.rs
rewrite/src/base/: geom.rs  list_op.rs  mod.rs
rewrite/src/export/: scad.rs
rewrite/tests/raw/: ThreeCube.csg
rewrite/tests/report/: ThreeCube.json
tests/: Cargo.toml
tests/program/: OneCube.txt  ThreeCube.txt
tests/ref/: OneCube.txt  ThreeCube.txt
tests/src/: tests.rs
