[package]
name = "szlanski-tests"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dev-dependencies]

# optimize
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2"
pest_derive = "2"

env_logger = "0.6"
once_cell = "1"

rand = "0.7"
rand_pcg = "0.2"

egg = { version = "0.9.2", features = ["serde-1"] }
# optimize end

szalinski-egg = { path = "../rewrite" }

rayon = "1.7.0"
walkdir = "2"

[[test]]
name = "tests"
path = "src/tests.rs"
harness = false

